--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <img src="images/project1.jpg" alt="Project 1">
                     <div class="project-info">
                         <h3>Dirty Work</h3>
-                        <p>A full-stack e-commerce solution built with React and Node.js</p>
+                        <p>“Dirty Work” shows aespa as fearless agents in a cyber-noir world, tackling dangerous missions others avoid. It’s about strength, confidence, and resilience amid chaos.</p>
                         <div class="project-links">
                             <a href="#" class="btn btn-small">Live Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
@@ -134,7 +134,7 @@
                     <img src="images/project2.jpg" alt="Project 2">
                     <div class="project-info">
                         <h3>Dark Art</h3>
-                        <p>A collaborative task management application with real-time updates</p>
+                        <p>“Dark Art” blends mystery and power, portraying aespa navigating a tense, high-stakes battlefield with style and control, inspired by their PUBG Mobile collab.</p>
                         <div class="project-links">
                             <a href="#" class="btn btn-small">Live Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
@@ -145,7 +145,7 @@
                     <img src="images/project3.jpg" alt="Project 3">
                     <div class="project-info">
                         <h3>Whiplash</h3>
-                        <p>A responsive weather application with location-based forecasts</p>
+                        <p>“Whiplash” is a bold, intense track about desire and control, with sharp visuals reflecting the rush and tension of temptation.</p>
                         <div class="project-links">
                             <a href="#" class="btn btn-small">Live Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
