--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 <div class="project-card">
                     <img src="images/project2.jpg" alt="Project 2">
                     <div class="project-info">
-                        <h3>Dark Art</h3>
-                        <p>“Dark Art” blends mystery and power, portraying aespa navigating a tense, high-stakes battlefield with style and control, inspired by their PUBG Mobile collab.</p>
+                        <h3>Dark Arts</h3>
+                        <p>“Dark Arts” blends mystery and power, portraying aespa navigating a tense, high-stakes battlefield with style and control, inspired by their PUBG Mobile collab.</p>
                         <div class="project-links">
                             <a href="#" class="btn btn-small">Live Demo</a>
                             <a href="#" class="btn btn-small btn-secondary">GitHub</a>
